syntax = "proto3";

package server2N;

message UserConnection{
	enum ConnectionType{
		Nothing = 0;
		Connect = 1;
		TryConnect = 2;
		AcceptConnect = 3;
		DisConnect = 4;
	}

	int32 connectorId = 1;
	ConnectionType conType = 2;
}

message GameEvent{
	enum action{
		Nothing		= 0;
		Move		= 100;
		Stop		= 101;
		Jump		= 102;
		Shoot		= 103;
		GetHit		= 104;
		Spawn		= 105;
	}

	action act = 3;
	int32 actionProperty = 5;
	float EventPositionX = 6;
	float EventPositionY = 7;
	float VelocityX = 8;
	float VelocityY = 9;
	int32 invokerId = 10;
}

message PacketBody{
	enum messageType{
		GameEvent		= 0;
		UserConnection	= 10000;
	}
   messageType msgType = 10000; 
   UserConnection connect = 6;
   GameEvent event = 7;
   int32 senderId = 8;
}

